--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ GOOGLE_CLIENT_ID=999604002949-f7o7227fno6fc9sub48cpb2g0cog5ekn.apps.googleuserco
 GOOGLE_CLIENT_SECRET=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
 JWT_SECRET=Qw7p!z2Lk@8vN4#xT0sR9^wF3$eB6&hY1*Vc5ZqM8jKpL2d 
 PORT= 5000
+FRONTEND_URL=http://localhost:3000
